[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bus_ha_sensor"
version = "1.0.0"
description = "Home Assistant integration for tracking bus lines in Israel"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jon Zarecki", email = "jonzarecki@gmail.com" },
]
dependencies = [
    "homeassistant>=2024.1.0",
    "israel_bus_locator @ git+https://github.com/jonzarecki/israel_bus_locator.git",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto" 